--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.Baraz" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/histry_first</item>
-        <item name="colorPrimaryVariant">@color/histry_first </item>
+        <item name="colorPrimaryVariant">@color/splashBackgroundColor </item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -16,8 +16,8 @@
 
     <style name="Theme.Baraz.Actionbar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/histry_first</item>
-        <item name="colorPrimaryVariant">@color/histry_first </item>
+        <item name="colorPrimary">@color/splashBackgroundColor</item>
+        <item name="colorPrimaryVariant">@color/splashBackgroundColor </item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
