--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RegisterActivity">
+    android:orientation="vertical"
+    tools:context=".activities.RegisterActivity"
+    tools:ignore="ExtraText">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/login_bckgnd">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome Onboard !"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="188dp"
+        android:textSize="18dp"
+        android:textColor="#000000"
+        android:ems="15"
+        />
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/login_bckgnd"
+            >
+
+    <EditText
+        android:id="@+id/register_fullname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter your full name"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:textSize="18dp"
+        android:background="@drawable/shape"
+        android:ems="16"
+        android:layout_marginTop="20dp"
+        />
+    <EditText
+        android:id="@+id/register_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter your email"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:textSize="18dp"
+        android:background="@drawable/shape"
+        android:ems="16"
+        android:layout_marginTop="20dp"
+        />
+
+    <EditText
+        android:id="@+id/register_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter your password"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:textSize="18dp"
+        android:background="@drawable/shape"
+        android:ems="16"
+        android:layout_marginTop="20dp"
+        />
+
+    <EditText
+        android:id="@+id/register_confirm_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Confirm password"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:textSize="18dp"
+        android:background="@drawable/shape"
+        android:ems="16"
+        android:layout_marginTop="20dp"
+        />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="50dp"
+            android:background="@color/login_bckgnd">
+    <Button
+        android:id="@+id/regieter_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAllCaps="false"
+        android:text="Register"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#333333"
+        android:textSize="18dp"
+        android:ems="15"
+        android:layout_marginTop="20dp"
+        />
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"    >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account ?"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="14dp"
+            android:textColor="#000000"
+            android:layout_marginLeft="120dp"
+            android:textAlignment="center"
+
+            />
+        <TextView
+            android:id="@+id/signUP_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign up"
+            android:padding="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"
+            android:textSize="14dp"
+            android:textColor="#FDB62F"
+
+            />
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
+</LinearLayout>
