--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,123 +10,125 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/login_bckgnd">
+        android:background="@color/login_bckgnd"
+        android:orientation="vertical">
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome Back !"
-            android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="130dp"
-            android:padding="10dp"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="#000000"
             android:ems="15"
-            />
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Welcome Back !"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
-            android:background="@color/login_bckgnd">
-            >
+            android:background="@color/login_bckgnd"
+            android:orientation="vertical">
+
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/login_pic"
-                android:padding="5dp"
                 android:layout_gravity="center"
-                />
+                android:padding="5dp"
+                android:src="@drawable/login_pic" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/login_bckgnd"
             android:orientation="vertical"
-            android:padding="5dp"
-            android:background="@color/login_bckgnd">
+            android:padding="5dp">
+
             <EditText
                 android:id="@+id/login_mail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Enter your email"
                 android:layout_gravity="center"
-                android:padding="10dp"
-                android:paddingStart="20dp"
-                android:textSize="18dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/shape"
                 android:ems="16"
-                android:layout_marginTop="20dp"
-                />
+                android:hint="Enter your email"
+                android:padding="10dp"
+                android:paddingStart="20dp"
+                android:textSize="18dp" />
+
             <EditText
                 android:id="@+id/login_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Enter your password"
                 android:layout_gravity="center"
-                android:padding="10dp"
-                android:paddingStart="20dp"
-                android:textSize="18dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/shape"
                 android:ems="16"
-                android:layout_marginTop="20dp"
-                />
+                android:hint="Enter your password"
+                android:padding="10dp"
+                android:paddingStart="20dp"
+                android:textSize="18dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
-            android:padding="5dp"
-            android:background="@color/login_bckgnd">
+            android:background="@color/login_bckgnd"
+            android:orientation="vertical"
+            android:padding="5dp">
+
             <Button
+                android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Register"
-                android:textAllCaps="false"
-                android:textSize="18dp"
-                android:textColor="#FFFFFF"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="#333333"
                 android:ems="16"
-                android:layout_marginTop="20dp"
-                />
+                android:text="Register"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            android:padding="5dp"
-            android:layout_marginTop="10dp"    >
+            android:padding="5dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account ?"
+                android:layout_gravity="center"
+                android:layout_marginLeft="80dp"
                 android:gravity="center"
                 android:padding="5dp"
-                android:layout_gravity="center"
-                android:textSize="14dp"
-                android:textColor="#554F4F"
-                android:layout_marginLeft="80dp"
+                android:text="Don't have an account ?"
                 android:textAlignment="center"
+                android:textColor="#554F4F"
+                android:textSize="14dp"
 
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign up"
-                android:padding="5dp"
-                android:layout_marginLeft="2dp"
                 android:layout_gravity="center"
-                android:textSize="14dp"
+                android:layout_marginLeft="2dp"
+                android:padding="5dp"
+                android:text="Sign up"
                 android:textColor="#FDB62F"
+                android:textSize="14dp"
 
                 />
 
@@ -134,8 +136,6 @@
         </LinearLayout>
 
 
-
-
-</LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
