--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -70,18 +70,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Air Force Gucci "
+            android:text="Air Force Gucci"
             android:textSize="30sp"
-            android:fontFamily="@font/e"
+            android:fontFamily="@font/pr"
             android:textStyle="bold"
+            android:textAlignment="center"
             android:layout_gravity="center"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
             android:text=" Jutta"
             android:textSize="20sp"
-            android:fontFamily="@font/e"
+            android:fontFamily="@font/pr"
             android:textStyle="bold"
             android:layout_gravity="center"
             />
@@ -173,7 +175,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:fontFamily="@font/d"
+                android:fontFamily="@font/q"
                 android:padding="15dp"
                 android:gravity="center"
                 android:text="ADD TO CART "
