--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -46,16 +46,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
-                android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_splashdrz"/>
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:foregroundGravity="center"
+                android:src="@drawable/ic_splashdrz" />
 
         </LinearLayout>
 
